--- a/tmux/.tmux.config
+++ b/tmux/.tmux.config
@@ -72,6 +72,13 @@ bind-key - split-window -v -c '#{pane_current_path}' # normally prefix-"
 # Kill pane without confirmation
 bind x kill-pane
 
+# Copy Mode vi
+bind-key Escape copy-mode
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi r send -X rectangle-toggle
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+
 # When scrolling with mouse wheel, reduce number of scrolled rows per tick to "2" (default is 5)
 bind -T copy-mode-vi WheelUpPane       select-pane \; send-keys -X -N 2 scroll-up
 bind -T copy-mode-vi WheelDownPane     select-pane \; send-keys -X -N 2 scroll-down
@@ -118,3 +125,4 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Initialize TMUX Plugin Manager (tpm)
 run '~/.tmux/plugins/tpm/tpm'
+
